ontol/ontol-compiler/test-cases/error/lexer/lex.on
; // ERROR lex error: illegal character `;`
